--- a/access/hostapd/etc/dnsmasq.conf
+++ b/access/hostapd/etc/dnsmasq.conf
@@ -14,7 +14,7 @@ local=/localnet/
 # specified interfaces (and the loopback) give the name of the
 # interface (eg eth0) here.
 # Repeat the line for more than one interface.
-interface=uap0
+interface=wlan0
 
 # Set the domain for dnsmasq. this is optional, but if it is set, it
 # does the following things.
@@ -30,15 +30,15 @@ domain=localnet
 # a lease time. If you have more than one network, you will need to
 # repeat this for each network on which you want to supply DHCP
 # service.
-dhcp-range=192.168.50.50,192.168.50.250,12h
+#dhcp-range=192.168.50.50,192.168.50.250,12h
 
 # Override the default route supplied by dnsmasq, which assumes the
 # router is the same machine as the one running dnsmasq.
-dhcp-option=3,192.168.50.1
+#dhcp-option=3,192.168.50.1
 
 
 #DNS Server
-dhcp-option=6,192.168.50.1
+#dhcp-option=6,192.168.50.1
 
 # Set the DHCP server to authoritative mode. In this mode it will barge in
 # and take over the lease for any client which broadcasts on the network,
@@ -48,4 +48,4 @@ dhcp-option=6,192.168.50.1
 # server for your campus/company accidentally. The ISC server uses
 # the same option, and this URL provides more information:
 # http://www.isc.org/files/auth.html
-dhcp-authoritative
+#dhcp-authoritative
